bug.txt
PS D:\lh01> streamlit run dashboard.py --server.headless true

Collecting usage statistics. To deactivate, set browser.gatherUsageStats to false.


  You can now view your Streamlit app in your browser.

  Local URL: http://localhost:8501
  Network URL: http://192.168.1.6:8501
  External URL: http://38.15.30.97:8501

2025-12-08 17:01:14.269 Script compilation error
Traceback (most recent call last):
  File "C:\Users\reki\AppData\Local\Programs\Python\Python312\Lib\site-packages\streamlit\runtime\scriptrunner\script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\reki\AppData\Local\Programs\Python\Python312\Lib\site-packages\streamlit\runtime\scriptrunner\script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\reki\AppData\Local\Programs\Python\Python312\Lib\site-packages\streamlit\runtime\scriptrunner\magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\reki\AppData\Local\Programs\Python\Python312\Lib\ast.py", line 52, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\lh01\dashboard.py", line 413
    st.info("暂无V7预测历史。请在"执行中心"运行V7预测以生成第一条记录。")
            ^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
2025-12-08 17:01:14.285 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.